--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    ini uji coba
     Aku belajar git, seru rek
+    ayo belajar git bareng
+    ini perubahan
 </body>
 </html>
